# libdetection

./: .builder.yml  .clang-format  .clang-format-ignore  .git-blame-ignore-revs  .gitignore  CMakeLists.txt  CTestConfig.cmake  Dockerfile  Jenkinsfile  JenkinsfileSanitize  LICENSE  README.md  config
cmake/modules/: FindLibWallarmMisc.cmake
debian/: changelog  control  copyright  libdetection1-dev.install  rules
include/: detect.h  detect_buf.h  detect_parser.h  queue.h
include/detect/: detect.h  detect_buf.h  detect_parser.h  detect_re2c.h
lib/: CMakeLists.txt  detect.c  detect_int.h  detect_parser.c  detect_re2c.c  detect_util.c
lib/bash/: CMakeLists.txt  bash.c  bash.h  bash_lexer.re2c  bash_parser.y  bash_test.h
lib/pt/: CMakeLists.txt  pt.c  pt.h  pt_lexer.re2c  pt_parser.y
lib/sqli/: CMakeLists.txt  sqli.c  sqli.h  sqli_lexer.re2c  sqli_lexer_helper.h  sqli_parser.y
lib/test/: CMakeLists.txt  detect_unit.c
perf/: CMakeLists.txt  perf.c  vg.in
rpm/SPECS/: libdetection.spec
